Translations: updated French translation by Gilles Vasseur, bug #27863
git-svn-id: trunk@48761 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -261,6 +261,7 @@ components/activex/importtypelib.lfm svneol=native#text/plain
 components/activex/importtypelib.pas svneol=native#text/plain
 components/activex/languages/activexstrconsts.cs.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.fi.po svneol=native#text/plain
+components/activex/languages/activexstrconsts.fr.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.hu.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.it.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.po svneol=native#text/plain
@@ -611,6 +612,7 @@ components/anchordocking/doc/anchordocking.xml svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.cs.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.de.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.es.po svneol=native#text/plain
+components/anchordocking/languages/anchordockstr.fr.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.hu.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.it.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.lt.po svneol=native#text/plain
@@ -924,6 +926,7 @@ components/codetools/ide/codyutils.pas svneol=native#text/pascal
 components/codetools/ide/declarevardlg.lfm svneol=native#text/plain
 components/codetools/ide/declarevardlg.pas svneol=native#text/pascal
 components/codetools/ide/languages/codystrconsts.de.po svneol=native#text/plain
+components/codetools/ide/languages/codystrconsts.fr.po svneol=native#text/plain
 components/codetools/ide/languages/codystrconsts.hu.po svneol=native#text/plain
 components/codetools/ide/languages/codystrconsts.it.po svneol=native#text/plain
 components/codetools/ide/languages/codystrconsts.lt.po svneol=native#text/plain
@@ -1049,6 +1052,7 @@ components/customform/lazcustforms.lpk svneol=native#text/plain
 components/customform/lazcustforms.pas svneol=native#text/plain
 components/daemon/languages/reglazdaemon.cs.po svneol=native#text/plain
 components/daemon/languages/reglazdaemon.es.po svneol=native#text/plain
+components/daemon/languages/reglazdaemon.fr.po svneol=native#text/plain
 components/daemon/languages/reglazdaemon.hu.po svneol=native#text/plain
 components/daemon/languages/reglazdaemon.it.po svneol=native#text/plain
 components/daemon/languages/reglazdaemon.lt.po svneol=native#text/plain
@@ -1075,6 +1079,7 @@ components/datadict/frmselectcodegenerator.pp svneol=native#text/plain
 components/datadict/idedatadict.pp svneol=native#text/plain
 components/datadict/languages/ldd_consts.cs.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.de.po svneol=native#text/plain
+components/datadict/languages/ldd_consts.fr.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.hu.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.it.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.lt.po svneol=native#text/plain
@@ -1142,6 +1147,7 @@ components/dbexport/frmselectexportformat.lfm svneol=native#text/plain
 components/dbexport/frmselectexportformat.pp svneol=native#text/plain
 components/dbexport/languages/sdb_consts.cs.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.de.po svneol=native#text/plain
+components/dbexport/languages/sdb_consts.fr.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.hu.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.it.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.lt.po svneol=native#text/plain
@@ -1197,6 +1203,7 @@ components/editortoolbar/jumpto_impl.pas svneol=native#text/plain
 components/editortoolbar/languages/editortoolbar_str.cs.po svneol=native#text/plain
 components/editortoolbar/languages/editortoolbar_str.de.po svneol=native#text/plain
 components/editortoolbar/languages/editortoolbar_str.es.po svneol=native#text/plain
+components/editortoolbar/languages/editortoolbar_str.fr.po svneol=native#text/plain
 components/editortoolbar/languages/editortoolbar_str.hu.po svneol=native#text/plain
 components/editortoolbar/languages/editortoolbar_str.it.po svneol=native#text/plain
 components/editortoolbar/languages/editortoolbar_str.lt.po svneol=native#text/plain
@@ -1229,6 +1236,7 @@ components/education/eduspeedbuttons.lfm svneol=native#text/plain
 components/education/eduspeedbuttons.pas svneol=native#text/plain
 components/education/languages/eduoptions.cs.po svneol=native#text/plain
 components/education/languages/eduoptions.de.po svneol=native#text/plain
+components/education/languages/eduoptions.fr.po svneol=native#text/plain
 components/education/languages/eduoptions.hu.po svneol=native#text/plain
 components/education/languages/eduoptions.it.po svneol=native#text/plain
 components/education/languages/eduoptions.lt.po svneol=native#text/plain
