Translations: updated French translation by Gilles Vasseur, bugs #27874, #27878
git-svn-id: trunk@48765 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1253,6 +1253,7 @@ components/externhelp/externhelp.pas svneol=native#text/plain
 components/externhelp/externhelpfrm.lfm svneol=native#text/plain
 components/externhelp/externhelpfrm.pas svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.de.po svneol=native#text/plain
+components/externhelp/languages/externhelpfrm.fr.po svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.hu.po svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.it.po svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.lt.po svneol=native#text/plain
@@ -1289,6 +1290,7 @@ components/fpcunit/ide/fpcunitlazideintf.pas svneol=native#text/pascal
 components/fpcunit/ide/fpcunitproject1.inc svneol=native#text/plain
 components/fpcunit/ide/fpcunitproject1.pas svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.cs.po svneol=native#text/plain
+components/fpcunit/ide/languages/fpcunitlazideintf.fr.po svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.hu.po svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.it.po svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.lt.po svneol=native#text/plain
@@ -1298,6 +1300,7 @@ components/fpcunit/ide/languages/fpcunitlazideintf.ru.po svneol=native#text/plai
 components/fpcunit/ide/languages/fpcunitlazideintf.uk.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.cs.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.de.po svneol=native#text/plain
+components/fpcunit/ide/languages/strtestcaseopts.fr.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.hu.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.it.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.lt.po svneol=native#text/plain
@@ -1309,6 +1312,7 @@ components/fpcunit/ide/strtestcaseopts.pas svneol=native#text/pascal
 components/fpcunit/ide/testcaseopts.lfm svneol=native#text/plain
 components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
 components/fpcunit/languages/guitestrunner.de.po svneol=native#text/plain
+components/fpcunit/languages/guitestrunner.fr.po svneol=native#text/plain
 components/fpcunit/languages/guitestrunner.hu.po svneol=native#text/plain
 components/fpcunit/languages/guitestrunner.it.po svneol=native#text/plain
 components/fpcunit/languages/guitestrunner.lt.po svneol=native#text/plain
@@ -1399,6 +1403,7 @@ components/fppkg/images/lazarus_pkg.png -text
 components/fppkg/images/package_manager.png -text
 components/fppkg/images/update.png -text
 components/fppkg/languages/fppkg_const.de.po svneol=native#text/plain
+components/fppkg/languages/fppkg_const.fr.po svneol=native#text/plain
 components/fppkg/languages/fppkg_const.hu.po svneol=native#text/plain
 components/fppkg/languages/fppkg_const.it.po svneol=native#text/plain
 components/fppkg/languages/fppkg_const.lt.po svneol=native#text/plain
