Translations: updated French translation by Gilles Vasseur, bugs #27904, #27913
git-svn-id: trunk@48782 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -716,6 +716,7 @@ components/chmhelp/packages/idehelp/chmlcl.pas svneol=native#text/plain
 components/chmhelp/packages/idehelp/chmprog.pas svneol=native#text/plain
 components/chmhelp/packages/idehelp/languages/lazchmhelp.de.po svneol=native#text/plain
 components/chmhelp/packages/idehelp/languages/lazchmhelp.fi.po svneol=native#text/plain
+components/chmhelp/packages/idehelp/languages/lazchmhelp.fr.po svneol=native#text/plain
 components/chmhelp/packages/idehelp/languages/lazchmhelp.hu.po svneol=native#text/plain
 components/chmhelp/packages/idehelp/languages/lazchmhelp.it.po svneol=native#text/plain
 components/chmhelp/packages/idehelp/languages/lazchmhelp.po svneol=native#text/plain
@@ -2822,6 +2823,7 @@ components/leakview/dbginforeader.pas svneol=native#text/pascal
 components/leakview/heaptrcview.lfm svneol=native#text/plain
 components/leakview/heaptrcview.pas svneol=native#text/plain
 components/leakview/languages/heaptrcview.cs.po svneol=native#text/plain
+components/leakview/languages/heaptrcview.fr.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.hu.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.it.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.lt.po svneol=native#text/plain
@@ -2830,6 +2832,7 @@ components/leakview/languages/heaptrcview.pt_BR.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.ru.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.uk.po svneol=native#text/plain
 components/leakview/languages/leakinfo.cs.po svneol=native#text/plain
+components/leakview/languages/leakinfo.fr.po svneol=native#text/plain
 components/leakview/languages/leakinfo.hu.po svneol=native#text/plain
 components/leakview/languages/leakinfo.it.po svneol=native#text/plain
 components/leakview/languages/leakinfo.lt.po svneol=native#text/plain
@@ -2860,6 +2863,7 @@ components/macroscript/emsideoptions.lfm svneol=native#text/pascal
 components/macroscript/emsideoptions.pas svneol=native#text/pascal
 components/macroscript/emsselftest.pas svneol=native#text/pascal
 components/macroscript/emsstrings.pas svneol=native#text/pascal
+components/macroscript/languages/emsstrings.fr.po svneol=native#text/plain
 components/macroscript/languages/emsstrings.hu.po svneol=native#text/plain
 components/macroscript/languages/emsstrings.it.po svneol=native#text/plain
 components/macroscript/languages/emsstrings.po svneol=native#text/plain
@@ -2892,6 +2896,7 @@ components/memds/tmemdataset.png -text svneol=unset#image/png
 components/messagecomposer/languages/messagecomposer.cs.po svneol=native#text/plain
 components/messagecomposer/languages/messagecomposer.de.po svneol=native#text/plain
 components/messagecomposer/languages/messagecomposer.es.po svneol=native#text/plain
+components/messagecomposer/languages/messagecomposer.fr.po svneol=native#text/plain
 components/messagecomposer/languages/messagecomposer.hu.po svneol=native#text/plain
 components/messagecomposer/languages/messagecomposer.it.po svneol=native#text/plain
 components/messagecomposer/languages/messagecomposer.lt.po svneol=native#text/plain
@@ -3187,6 +3192,7 @@ components/projecttemplates/languages/idetemplateproject.zh_CN.po svneol=native#
 components/projecttemplates/languages/projecttemplates.cs.po svneol=native#text/plain
 components/projecttemplates/languages/projecttemplates.de.po svneol=native#text/plain
 components/projecttemplates/languages/projecttemplates.es.po svneol=native#text/plain
+components/projecttemplates/languages/projecttemplates.fr.po svneol=native#text/plain
 components/projecttemplates/languages/projecttemplates.hu.po svneol=native#text/plain
 components/projecttemplates/languages/projecttemplates.id.po svneol=native#text/plain
 components/projecttemplates/languages/projecttemplates.it.po svneol=native#text/plain
@@ -3313,6 +3319,7 @@ components/sqldb/fpmake.pp svneol=native#text/plain
 components/sqldb/languages/registersqldb.cs.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.de.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.es.po svneol=native#text/plain
+components/sqldb/languages/registersqldb.fr.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.hu.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.it.po svneol=native#text/plain
 components/sqldb/languages/registersqldb.lt.po svneol=native#text/plain
@@ -3324,6 +3331,7 @@ components/sqldb/languages/registersqldb.zh_CN.po svneol=native#text/plain
 components/sqldb/languages/sqlstringspropertyeditordlg.cs.po svneol=native#text/plain
 components/sqldb/languages/sqlstringspropertyeditordlg.de.po svneol=native#text/plain
 components/sqldb/languages/sqlstringspropertyeditordlg.es.po svneol=native#text/plain
+components/sqldb/languages/sqlstringspropertyeditordlg.fr.po svneol=native#text/plain
 components/sqldb/languages/sqlstringspropertyeditordlg.hu.po svneol=native#text/plain
 components/sqldb/languages/sqlstringspropertyeditordlg.it.po svneol=native#text/plain
 components/sqldb/languages/sqlstringspropertyeditordlg.lt.po svneol=native#text/plain
@@ -3340,6 +3348,7 @@ components/sqldb/sqldblaz.pas svneol=native#text/pascal
 components/sqldb/sqlstringspropertyeditordlg.lfm svneol=native#text/plain
 components/sqldb/sqlstringspropertyeditordlg.pas svneol=native#text/plain
 components/sqlite/languages/sqlitecompstrings.de.po svneol=native#text/plain
+components/sqlite/languages/sqlitecompstrings.fr.po svneol=native#text/plain
 components/sqlite/languages/sqlitecompstrings.hu.po svneol=native#text/plain
 components/sqlite/languages/sqlitecompstrings.po svneol=native#text/plain
 components/sqlite/languages/sqlitecompstrings.ru.po svneol=native#text/plain
