IDEIntf: regenerated translations
git-svn-id: trunk@48784 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1740,6 +1740,7 @@ components/ideintf/languages/objinspstrconsts.nl.po svneol=native#text/plain
 components/ideintf/languages/objinspstrconsts.pl.po svneol=native#text/plain
 components/ideintf/languages/objinspstrconsts.po svneol=native#text/plain
 components/ideintf/languages/objinspstrconsts.pt_BR.po svneol=native#text/plain
+components/ideintf/languages/objinspstrconsts.ru.mo -text
 components/ideintf/languages/objinspstrconsts.ru.po svneol=native#text/plain
 components/ideintf/languages/objinspstrconsts.sk.po svneol=native#text/plain
 components/ideintf/languages/objinspstrconsts.uk.po svneol=native#text/plain
