--- a/.gitattributes
+++ b/.gitattributes
@@ -1591,6 +1591,7 @@ components/fpweb/images/tag_u.png -text svneol=unset#image/png
 components/fpweb/images/tag_ul.png -text svneol=unset#image/png
 components/fpweb/languages/fpwebstrconsts.cs.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.de.po svneol=native#text/plain
+components/fpweb/languages/fpwebstrconsts.fr.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.hu.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.it.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.lt.po svneol=native#text/plain
@@ -1608,6 +1609,7 @@ components/fpweb/languages/frmrpcmoduleoptions.pt_BR.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.ru.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.uk.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.cs.po svneol=native#text/plain
+components/fpweb/languages/weblazideintf.fr.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.hu.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.it.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.lt.po svneol=native#text/plain
@@ -1798,6 +1800,7 @@ components/instantfpc/instantfpclaz.pas svneol=native#text/plain
 components/instantfpc/instantfpcregisterlaz.pas svneol=native#text/plain
 components/instantfpc/languages/instantfpcregisterlaz.cs.po svneol=native#text/plain
 components/instantfpc/languages/instantfpcregisterlaz.es.po svneol=native#text/plain
+components/instantfpc/languages/instantfpcregisterlaz.fr.po svneol=native#text/plain
 components/instantfpc/languages/instantfpcregisterlaz.hu.po svneol=native#text/plain
 components/instantfpc/languages/instantfpcregisterlaz.it.po svneol=native#text/plain
 components/instantfpc/languages/instantfpcregisterlaz.lt.po svneol=native#text/plain
@@ -2734,6 +2737,7 @@ components/lazutils/fpmake.pp svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.cs.po svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.de.po svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.es.po svneol=native#text/plain
+components/lazutils/languages/lazutilsstrconsts.fr.po svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.hu.po svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.it.po svneol=native#text/plain
 components/lazutils/languages/lazutilsstrconsts.lt.po svneol=native#text/plain
@@ -2744,6 +2748,7 @@ components/lazutils/languages/lazutilsstrconsts.uk.po svneol=native#text/plain
 components/lazutils/languages/luresstrings.cs.po svneol=native#text/plain
 components/lazutils/languages/luresstrings.de.po svneol=native#text/plain
 components/lazutils/languages/luresstrings.es.po svneol=native#text/plain
+components/lazutils/languages/luresstrings.fr.po svneol=native#text/plain
 components/lazutils/languages/luresstrings.hu.po svneol=native#text/plain
 components/lazutils/languages/luresstrings.it.po svneol=native#text/plain
 components/lazutils/languages/luresstrings.lt.po svneol=native#text/plain
@@ -3156,6 +3161,7 @@ components/projecttemplates/frmtemplatevariables.pas svneol=native#text/plain
 components/projecttemplates/idetemplateproject.pp svneol=native#text/plain
 components/projecttemplates/languages/frmtemplatesettings.de.po svneol=native#text/plain
 components/projecttemplates/languages/frmtemplatesettings.es.po svneol=native#text/plain
+components/projecttemplates/languages/frmtemplatesettings.fr.po svneol=native#text/plain
 components/projecttemplates/languages/frmtemplatesettings.hu.po svneol=native#text/plain
 components/projecttemplates/languages/frmtemplatesettings.it.po svneol=native#text/plain
 components/projecttemplates/languages/frmtemplatesettings.lt.po svneol=native#text/plain
