--- a/.gitattributes
+++ b/.gitattributes
@@ -6843,6 +6843,7 @@ lcl/interfaces/customdrawn/customdrawnobject_win.inc svneol=native#text/pascal
 lcl/interfaces/customdrawn/customdrawnobject_x11.inc svneol=native#text/pascal
 lcl/interfaces/customdrawn/customdrawnprivate.pas svneol=native#text/plain
 lcl/interfaces/customdrawn/customdrawnproc.pas svneol=native#text/plain
+lcl/interfaces/customdrawn/customdrawnthemes.pas svneol=native#text/pascal
 lcl/interfaces/customdrawn/customdrawntrayicon_android.inc svneol=native#text/pascal
 lcl/interfaces/customdrawn/customdrawntrayicon_cocoa.inc svneol=native#text/pascal
 lcl/interfaces/customdrawn/customdrawntrayicon_win.inc svneol=native#text/pascal
