--- a/.gitattributes
+++ b/.gitattributes
@@ -2843,6 +2843,7 @@ components/leakview/dbginforeader.pas svneol=native#text/pascal
 components/leakview/heaptrcview.lfm svneol=native#text/plain
 components/leakview/heaptrcview.pas svneol=native#text/plain
 components/leakview/languages/heaptrcview.cs.po svneol=native#text/plain
+components/leakview/languages/heaptrcview.es.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.fr.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.hu.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.it.po svneol=native#text/plain
@@ -2852,6 +2853,7 @@ components/leakview/languages/heaptrcview.pt_BR.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.ru.po svneol=native#text/plain
 components/leakview/languages/heaptrcview.uk.po svneol=native#text/plain
 components/leakview/languages/leakinfo.cs.po svneol=native#text/plain
+components/leakview/languages/leakinfo.es.po svneol=native#text/plain
 components/leakview/languages/leakinfo.fr.po svneol=native#text/plain
 components/leakview/languages/leakinfo.hu.po svneol=native#text/plain
 components/leakview/languages/leakinfo.it.po svneol=native#text/plain
@@ -3071,6 +3073,7 @@ components/printers/design/Makefile.compiled svneol=native#text/plain
 components/printers/design/Makefile.fpc svneol=native#text/plain
 components/printers/design/ideprinting.pas svneol=native#text/plain
 components/printers/design/languages/ideprinting.de.po svneol=native#text/plain
+components/printers/design/languages/ideprinting.es.po svneol=native#text/plain
 components/printers/design/languages/ideprinting.fi.po svneol=native#text/plain
 components/printers/design/languages/ideprinting.fr.po svneol=native#text/plain
 components/printers/design/languages/ideprinting.hu.po svneol=native#text/plain
