Translations: French translation update by Gilles Vasseur, bug #27990
git-svn-id: trunk@48883 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,7 @@ components/IdeLazLogger/idelogger.lfm svneol=native#text/pascal
 components/IdeLazLogger/idelogger.pas svneol=native#text/pascal
 components/IdeLazLogger/languages/idelogger.cs.po svneol=native#text/plain
 components/IdeLazLogger/languages/idelogger.es.po svneol=native#text/plain
+components/IdeLazLogger/languages/idelogger.fr.po svneol=native#text/plain
 components/IdeLazLogger/languages/idelogger.hu.po svneol=native#text/plain
 components/IdeLazLogger/languages/idelogger.it.po svneol=native#text/plain
 components/IdeLazLogger/languages/idelogger.lt.po svneol=native#text/plain
@@ -2123,11 +2124,13 @@ components/lazdebuggergdbmi/gdbmistringconstants.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/gdbtypeinfo.pp svneol=native#text/pascal
 components/lazdebuggergdbmi/ideminilibc.pas svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.de.po svneol=native#text/plain
+components/lazdebuggergdbmi/languages/gdbmiserverdebugger.fr.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.hu.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.it.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.ru.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmistringconstants.es.po svneol=native#text/plain
+components/lazdebuggergdbmi/languages/gdbmistringconstants.fr.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmistringconstants.hu.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmistringconstants.it.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmistringconstants.ja.po svneol=native#text/plain
@@ -2685,6 +2688,7 @@ components/lazsvnpkg/images/menu_svn_revert.png -text svneol=unset#image/png
 components/lazsvnpkg/images/menu_svn_update.png -text
 components/lazsvnpkg/languages/svnclasses.cs.po svneol=native#text/plain
 components/lazsvnpkg/languages/svnclasses.de.po svneol=native#text/plain
+components/lazsvnpkg/languages/svnclasses.fr.po svneol=native#text/plain
 components/lazsvnpkg/languages/svnclasses.hu.po svneol=native#text/plain
 components/lazsvnpkg/languages/svnclasses.it.po svneol=native#text/plain
 components/lazsvnpkg/languages/svnclasses.lt.po svneol=native#text/plain
