--- a/.gitattributes
+++ b/.gitattributes
@@ -4050,6 +4050,7 @@ components/turbopower_ipro/languages/ipconst.pt_BR.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.ru.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/ipconst.zh_CN.po svneol=native#text/plain
+components/turbopower_ipro/languages/iphtmlpv.fr.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.hu.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.it.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.lt.po svneol=native#text/plain
@@ -4058,6 +4059,7 @@ components/turbopower_ipro/languages/iphtmlpv.pt_BR.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.ru.po svneol=native#text/plain
 components/turbopower_ipro/languages/iphtmlpv.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.de.po svneol=native#text/plain
+components/turbopower_ipro/languages/iputils.fr.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.hu.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.id.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.it.po svneol=native#text/plain
