--- a/.gitattributes
+++ b/.gitattributes
@@ -1598,6 +1598,7 @@ components/fpweb/images/tag_td.png -text svneol=unset#image/png
 components/fpweb/images/tag_tr.png -text svneol=unset#image/png
 components/fpweb/images/tag_u.png -text svneol=unset#image/png
 components/fpweb/images/tag_ul.png -text svneol=unset#image/png
+components/fpweb/images/tfphttpwebclient.png -text svneol=unset#image/png
 components/fpweb/languages/fpwebstrconsts.cs.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.de.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.fr.po svneol=native#text/plain
