--- a/.gitattributes
+++ b/.gitattributes
@@ -7561,6 +7561,7 @@ packager/globallinks/lazdbexport-1.lpl svneol=native#text/plain
 packager/globallinks/lazdebuggerfp-0.lpl svneol=native#text/plain
 packager/globallinks/lazdebuggerfpgdbmi-0.1.lpl svneol=native#text/plain
 packager/globallinks/lazdebuggergdbmi-0.1.lpl svneol=native#text/plain
+packager/globallinks/lazgoogleapis-1.lpl svneol=native#text/plain
 packager/globallinks/lazmouseandkeyinput-0.1.lpl svneol=native#text/plain
 packager/globallinks/lazmrumenu-1.lpl svneol=native#text/plain
 packager/globallinks/lazopenglcontext-0.0.1.lpl svneol=native#text/plain
