FPDServer: Stand-alone debugger that can be controlled from the console or remote through tcp/ip
git-svn-id: trunk@48991 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1343,6 +1343,14 @@ components/fpdebug/app/fpd/fpdpeimage.pas svneol=native#text/pascal
 components/fpdebug/app/fpd/fpdtype.pas svneol=native#text/pascal
 components/fpdebug/app/fpdd/fpdumpdwarf.lpi svneol=native#text/plain
 components/fpdebug/app/fpdd/fpdumpdwarf.lpr svneol=native#text/pascal
+components/fpdebug/app/fpdserver/Info.plist svneol=native#text/plain
+components/fpdebug/app/fpdserver/debuginoutputprocessor.pas svneol=native#text/plain
+components/fpdebug/app/fpdserver/debugtcpserver.pas svneol=native#text/plain
+components/fpdebug/app/fpdserver/debugthread.pas svneol=native#text/plain
+components/fpdebug/app/fpdserver/debugthreadcommand.pas svneol=native#text/plain
+components/fpdebug/app/fpdserver/fpdserver.lpi svneol=native#text/plain
+components/fpdebug/app/fpdserver/fpdserver.lpr svneol=native#text/plain
+components/fpdebug/app/fpdserver/readme.txt svneol=native#text/plain
 components/fpdebug/fpdbgclasses.pp svneol=native#text/pascal
 components/fpdebug/fpdbgcontroller.pas svneol=native#text/plain
 components/fpdebug/fpdbgdarwinclasses.pas svneol=native#text/plain
