--- a/.gitattributes
+++ b/.gitattributes
@@ -1641,6 +1641,7 @@ components/fpweb/lazwebextra.lpk svneol=native#text/plain
 components/fpweb/weblaz.lpk svneol=native#text/plain
 components/fpweb/weblaz.pas svneol=native#text/plain
 components/fpweb/weblazideintf.pp svneol=native#text/plain
+components/googleapis/2_6_4/getsources.sh svneol=native#text/plain
 components/googleapis/2_6_4/synapsewebclient.pp svneol=native#text/plain
 components/googleapis/README.txt svneol=native#text/plain
 components/googleapis/demo/calendar/calendardemo.lpi svneol=native#text/plain
