LazUtils: New List classes
git-svn-id: trunk@49054 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2933,6 +2933,7 @@ components/lazutils/lazfileutils.inc svneol=native#text/plain
 components/lazutils/lazfileutils.pas svneol=native#text/pascal
 components/lazutils/lazfreetype.pas svneol=native#text/pascal
 components/lazutils/lazfreetypefontcollection.pas svneol=native#text/plain
+components/lazutils/lazlistclasses.pas svneol=native#text/plain
 components/lazutils/lazlogger.pas svneol=native#text/pascal
 components/lazutils/lazloggerbase.pas svneol=native#text/pascal
 components/lazutils/lazloggerdummy.pas svneol=native#text/pascal
@@ -2950,6 +2951,9 @@ components/lazutils/lconvencoding.pas svneol=native#text/pascal
 components/lazutils/lcsvutils.pas svneol=native#text/pascal
 components/lazutils/masks.pas svneol=native#text/pascal
 components/lazutils/paswstring.pas svneol=native#text/pascal
+components/lazutils/test/TestLazStorageMem.lpi svneol=native#text/plain
+components/lazutils/test/TestLazStorageMem.lpr svneol=native#text/plain
+components/lazutils/test/testlazstoragememcase1.pas svneol=native#text/plain
 components/lazutils/ttcache.pas svneol=native#text/pascal
 components/lazutils/ttcalc.pas svneol=native#text/pascal
 components/lazutils/ttcalc1.inc svneol=native#text/pascal
