IDE: Rename dialog CustomDefines -> DefinesGui.
git-svn-id: trunk@49156 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5603,10 +5603,10 @@ ide/componentpalette.pas svneol=native#text/pascal
 ide/compoptsmodes.pas svneol=native#text/plain
 ide/comppagespopup.lfm svneol=native#text/plain
 ide/comppagespopup.pas svneol=native#text/pascal
-ide/customdefines.lfm svneol=native#text/plain
-ide/customdefines.pas svneol=native#text/pascal
 ide/customformeditor.pp svneol=native#text/pascal
 ide/debugmanager.pas svneol=native#text/pascal
+ide/definesgui.lfm svneol=native#text/plain
+ide/definesgui.pas svneol=native#text/pascal
 ide/dialogprocs.pas svneol=native#text/pascal
 ide/diffdialog.lfm svneol=native#text/plain
 ide/diffdialog.pas svneol=native#text/pascal
