--- a/.gitattributes
+++ b/.gitattributes
@@ -1346,6 +1346,7 @@ components/fpdebug/app/fpdd/fpdumpdwarf.lpr svneol=native#text/pascal
 components/fpdebug/app/fpdserver/Info.plist svneol=native#text/plain
 components/fpdebug/app/fpdserver/debugconsoleserver.pas svneol=native#text/plain
 components/fpdebug/app/fpdserver/debuginoutputprocessor.pas svneol=native#text/plain
+components/fpdebug/app/fpdserver/debugscriptserver.pas svneol=native#text/plain
 components/fpdebug/app/fpdserver/debugtcpserver.pas svneol=native#text/plain
 components/fpdebug/app/fpdserver/debugthread.pas svneol=native#text/plain
 components/fpdebug/app/fpdserver/debugthreadcommand.pas svneol=native#text/plain
