--- a/.gitattributes
+++ b/.gitattributes
@@ -6273,6 +6273,11 @@ images/menu/menu_goto_line.png -text svneol=unset#image/png
 images/menu/menu_help.png -text svneol=unset#image/png
 images/menu/menu_indent.png -text svneol=unset#image/png
 images/menu/menu_information.png -text svneol=unset#image/png
+images/menu/menu_jumpto_implementation.png -text svneol=unset#image/png
+images/menu/menu_jumpto_implementationuses.png -text svneol=unset#image/png
+images/menu/menu_jumpto_initialization.png -text svneol=unset#image/png
+images/menu/menu_jumpto_interface.png -text svneol=unset#image/png
+images/menu/menu_jumpto_interfaceuses.png -text svneol=unset#image/png
 images/menu/menu_new.png -text svneol=unset#image/png
 images/menu/menu_pause.png -text svneol=unset#image/png
 images/menu/menu_project_add.png -text svneol=unset#image/png
