--- a/.gitattributes
+++ b/.gitattributes
@@ -2222,6 +2222,14 @@ components/lazcontrols/design/lazcontroldsgn.lpk svneol=native#text/pascal
 components/lazcontrols/design/lazcontroldsgn.pas svneol=native#text/pascal
 components/lazcontrols/design/registerlazcontrols.pas svneol=native#text/pascal
 components/lazcontrols/dividerbevel.pas svneol=native#text/pascal
+components/lazcontrols/docs/checkboxthemed.xml svneol=native#text/plain
+components/lazcontrols/docs/dividerbevel.xml svneol=native#text/plain
+components/lazcontrols/docs/extendednotebook.xml svneol=native#text/plain
+components/lazcontrols/docs/listfilteredit.xml svneol=native#text/plain
+components/lazcontrols/docs/listviewfilteredit.xml svneol=native#text/plain
+components/lazcontrols/docs/lvlgraphctrl.xml svneol=native#text/plain
+components/lazcontrols/docs/shortpathedit.xml svneol=native#text/plain
+components/lazcontrols/docs/treefilteredit.xml svneol=native#text/plain
 components/lazcontrols/extendednotebook.pas svneol=native#text/pascal
 components/lazcontrols/extendedtabcontrols.pas svneol=native#text/pascal
 components/lazcontrols/fpmake.pp svneol=native#text/plain
