Printers: added Russian translation
git-svn-id: trunk@49355 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3256,6 +3256,7 @@ components/printers/images/tpagesetupdialog.png -text svneol=unset#image/png
 components/printers/images/tprintdialog.png -text svneol=unset#image/png
 components/printers/images/tprintersetupdialog.png -text svneol=unset#image/png
 components/printers/languages/printer4lazstrconst.po svneol=native#text/plain
+components/printers/languages/printer4lazstrconst.ru.po svneol=native#text/plain
 components/printers/osprinters.pas svneol=native#text/pascal
 components/printers/printer4lazarus.lpk svneol=native#text/pascal
 components/printers/printer4lazarus.pas svneol=native#text/pascal
