--- a/.gitattributes
+++ b/.gitattributes
@@ -5635,6 +5635,7 @@ ide/editormacrolistviewer.pas svneol=native#text/pascal
 ide/editoroptions.pp svneol=native#text/pascal
 ide/editoroptions.rc svneol=native#text/plain
 ide/editoroptions.res -text
+ide/editortoolbarstatic.pas svneol=native#text/pascal
 ide/emptymethodsdlg.lfm svneol=native#text/plain
 ide/emptymethodsdlg.pas svneol=native#text/plain
 ide/encloseifdef.lfm svneol=native#text/plain
@@ -5757,6 +5758,8 @@ ide/frames/editor_mouseaction_options_advanced.lfm svneol=native#text/plain
 ide/frames/editor_mouseaction_options_advanced.pas svneol=native#text/pascal
 ide/frames/editor_multiwindow_options.lfm svneol=native#text/plain
 ide/frames/editor_multiwindow_options.pas svneol=native#text/pascal
+ide/frames/editortoolbar_options.lfm svneol=native#text/plain
+ide/frames/editortoolbar_options.pas svneol=native#text/pascal
 ide/frames/env_file_filters.lfm svneol=native#text/plain
 ide/frames/env_file_filters.pas svneol=native#text/plain
 ide/frames/files_options.lfm svneol=native#text/plain
