Rename ToolbarData -> IdeCoolbarData.
git-svn-id: trunk@49384 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5779,6 +5779,7 @@ ide/ide.pas svneol=native#text/pascal
 ide/idecmdline.pas svneol=native#text/plain
 ide/idecontexthelpedit.lfm svneol=native#text/plain
 ide/idecontexthelpedit.pas svneol=native#text/plain
+ide/idecoolbardata.pas svneol=native#text/pascal
 ide/idedefs.pas svneol=native#text/pascal
 ide/idefpcinfo.lfm svneol=native#text/plain
 ide/idefpcinfo.pas svneol=native#text/plain
@@ -5916,7 +5917,6 @@ ide/sysvaruseroverridedlg.lfm svneol=native#text/plain
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
 ide/toolbarconfig.lfm svneol=native#text/plain
 ide/toolbarconfig.pas svneol=native#text/pascal
-ide/toolbardata.pas svneol=native#text/pascal
 ide/transfermacros.pp svneol=native#text/pascal
 ide/unitdependencies.lfm svneol=native#text/plain
 ide/unitdependencies.pas svneol=native#text/pascal
