--- a/.gitattributes
+++ b/.gitattributes
@@ -5959,6 +5959,7 @@ images/bookmark.sh svneol=native#text/plain
 images/bookmark_list.txt svneol=native#text/plain
 images/btn_downarrow.png -text
 images/codeexplorer/ce_class.png -text
+images/codeexplorer/ce_classinterface.png -text svneol=unset#image/png
 images/codeexplorer/ce_const.png -text
 images/codeexplorer/ce_cycleimplementation.png -text svneol=unset#image/png
 images/codeexplorer/ce_cycleinterface.png -text svneol=unset#image/png
@@ -5967,6 +5968,7 @@ images/codeexplorer/ce_deprecated.png -text
 images/codeexplorer/ce_experimental.png -text
 images/codeexplorer/ce_finalization.png -text
 images/codeexplorer/ce_function.png -text
+images/codeexplorer/ce_helper.png -text svneol=unset#image/png
 images/codeexplorer/ce_implementation.png -text
 images/codeexplorer/ce_initialization.png -text
 images/codeexplorer/ce_interface.png -text
@@ -5976,6 +5978,7 @@ images/codeexplorer/ce_procedure.png -text
 images/codeexplorer/ce_program.png -text
 images/codeexplorer/ce_property.png -text
 images/codeexplorer/ce_property_readonly.png -text svneol=unset#image/png
+images/codeexplorer/ce_record.png -text svneol=unset#image/png
 images/codeexplorer/ce_section.png -text svneol=unset#image/png
 images/codeexplorer/ce_type.png -text
 images/codeexplorer/ce_unimplemented.png -text
