Add a dummy package to replace the removed EditorToolbar package. Prevent compilation error with LazBuild.
git-svn-id: trunk@49411 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1189,6 +1189,9 @@ components/debuggerintf/dbgintfmiscclasses.pas svneol=native#text/pascal
 components/debuggerintf/debuggerintf.lpk svneol=native#text/plain
 components/debuggerintf/debuggerintf.pas svneol=native#text/pascal
 components/debuggerintf/fpmake.pp svneol=native#text/plain
+components/editortoolbar/editortoolbar.lpk svneol=native#text/plain
+components/editortoolbar/editortoolbar.pas svneol=native#text/pascal
+components/editortoolbar/unit1.pas svneol=native#text/pascal
 components/education/README.txt svneol=native#text/plain
 components/education/educationlaz.lpk svneol=native#text/plain
 components/education/educationlaz.pas svneol=native#text/plain
