--- a/.gitattributes
+++ b/.gitattributes
@@ -346,6 +346,7 @@ components/aggpas/image_transforms.dpr svneol=native#text/plain
 components/aggpas/image_transforms.txt svneol=native#text/plain
 components/aggpas/interactive_polygon_.pas svneol=native#text/plain
 components/aggpas/lazarus/aggpaslcl.lpk svneol=native#text/plain
+components/aggpas/lazarus/aggpaslcl.pas svneol=native#text/plain
 components/aggpas/lazarus/example/AggPasInLCLDemo1.lpi svneol=native#text/plain
 components/aggpas/lazarus/example/AggPasInLCLDemo1.lpr svneol=native#text/plain
 components/aggpas/lazarus/example/AggPasInLCLDemo2.lpi svneol=native#text/plain
