LCL: Implement TTimeEdit. Patch by Michael Fuchs, modified by me.
git-svn-id: trunk@49566 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6525,6 +6525,8 @@ lcl/forms/finddlgunit.lfm svneol=native#text/plain
 lcl/forms/finddlgunit.pas svneol=native#text/plain
 lcl/forms/replacedlgunit.lfm svneol=native#text/plain
 lcl/forms/replacedlgunit.pas svneol=native#text/plain
+lcl/forms/timepopup.lfm svneol=native#text/plain
+lcl/forms/timepopup.pas svneol=native#text/pascal
 lcl/fpmake.pp svneol=native#text/plain
 lcl/graphics.pp svneol=native#text/pascal
 lcl/graphmath.pp svneol=native#text/pascal
